--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/student_management_system?allowPublicKeyRetrieval=true&useSSL=false
 
+
+spring.datasource.username=root
+
+spring.datasource.password=password123
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.hibernate.ddl-auto = update
